crates/toml/tests/snapshots/invalid/array/extend-defined-aot.stderr
TOML parse error at line 3, column 5
  |
3 | arr.val1=1
  |     ^^^^
duplicate key
